<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:flow_horizontalAlign="center"
    android:background="#FFFFFF"
    app:flow_verticalAlign="center"
    android:layout_height="185dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#96C6EC"
            android:padding="12dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/idee"
                android:layout_width="73dp"
                android:layout_height="118dp"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.062">

            </TextView>

            <TextView
                android:id="@+id/namee"
                android:layout_width="199dp"
                android:layout_height="49dp"
                android:layout_marginBottom="4dp"
                android:text="@string/akaka"
                android:textAlignment="center"
                android:textColor="#21284E"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/emailll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.561"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/emailll"
                android:layout_width="199dp"
                android:layout_height="49dp"
                android:layout_marginBottom="56dp"
                android:text="@string/akakska"
                android:textAlignment="center"
                android:textColor="#21284E"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.566"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="199dp"
                android:layout_height="49dp"
                android:layout_marginBottom="8dp"
                android:text="@string/skkas"
                android:textAlignment="center"
                android:textColor="#21284E"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.561"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>